Implement simple pair trading strategy

--- a/get_stock_data.ipynb
+++ b/get_stock_data.ipynb
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_symbol = \"AAPL\"\n",
+    "stock_symbol = \"TSM\"\n",
     "apl_data = get_stock_data(stock_symbol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
